[package]
name = "tictactoe-playdate"
version = "0.1.0"
edition = "2024"

[package.metadata.cargo-xbuild]
memcpy = false
sysroot_path = "target/sysroot"
panic_immediate_abort = false

[profile.dev]
panic = "abort"
opt-level = 'z'
lto = true

[profile.release]
panic = "abort"
opt-level = 'z'
lto = true

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
crankstart = { path = "../crates/crankstart" }
crankstart-sys = { path = "../crates/crankstart/crankstart-sys" }
anyhow = { version = "1.0", default-features = false }
euclid = { version = "0.22", default-features = false, features = ["libm"] }
hashbrown = { version = "0.15", default-features = false, features = ["alloc"] }

[lints.rust]
deprecated = "allow"
static_mut_refs = "allow"
unused_unsafe = "allow"
unsafe_op_in_unsafe_fn = "allow"
